website almost finished

--- a/index.html
+++ b/index.html
@@ -1,12 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet'>
+    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@900&display=swap" rel="stylesheet">
+    <title>Portfolio Assignment</title>
 </head>
+
 <body>
-    
+    <!-- This is 1st section -->
+    <section class="header-area">
+        <div class="header-text">
+            <h1 class="custom-header">Hello I'm</h1>
+            <h1 class="name">Jack Smith</h1>
+            <p style="font-size: 20px;">You might saw me jumping, climbing buildings, and stopping trains. But nobody
+                pays me a dime for that work.</p><br>
+            <a class="link-btn" href="https://www.linkedin.com/in/roky-das-448b3617b/">HIRE ME</a>
+        </div>
+        <div class="header-pic">
+            <img width="100%" src="images/peter.png" alt="Peter's first picture">
+        </div>
+    </section>
+    <!-- This is 2nd section -->
+    <section class="biography-area">
+        <div class="biography-pic">
+            <img width="80%" src="images/peter_dream.png" alt="Peter's first picture">
+        </div>
+        <div class="biography-text">
+            <h1 class="custom-header">Biography</h1>
+            <p style="font-size: 20px;">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
+                Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a
+                galley of type and scrambled it to make a type.</p><br>
+            <a class="link-btn" href="https://www.linkedin.com/in/roky-das-448b3617b/">DOWNLOAD CV</a>
+        </div>
+    </section>
+    <!-- This is 3rd section -->
+    <section class="work">
+        <h1 class="work-client-heading">My latest work</h1>
+        <div class="work-all">
+            <div class="work-single">
+                <img width="100%" src="images/latest-work/work-1.png" alt="">
+            </div>
+            <div style="margin: 0% 5%;" class="work-single">
+                <img width="100%" src="images/latest-work/work-2.jpg" alt="">
+            </div>
+            <div class="work-single">
+                <img width="100%" src="images/latest-work/work-3.jpg" alt="">
+            </div>
+        </div>
+    </section>
+    <!-- This is 4th section -->
+    <section class="footer">
+        <h1 class="work-client-heading">What client are say</h1>
+        <div class="client-all">
+            <div class="client-single">
+                <img class="circle" width="20%" src="images/bruce.png" alt="">
+                <h4>Bruce Moccy</h4>
+                <p class="purple">Founder & CEO Alies</p>
+                <p class="purple">"Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                    Lorem Ipsum"</p>
+            </div>
+            <div style="margin: 0% 3%;" class="client-single">
+                <img class="circle" width="20%" src="images/bruce.png" alt="">
+                <h4>Bruce Moccy</h4>
+                <p class="purple">Founder & CEO Alies</p>
+                <p class="purple">"Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                    Lorem Ipsum"</p>
+            </div>
+            <div class="client-single">
+                <img class="circle" width="20%" src="images/bruce.png" alt="">
+                <h4>Bruce Moccy</h4>
+                <p class="purple">Founder & CEO Alies</p>
+                <p class="purple">"Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                    Lorem Ipsum"</p>
+            </div>
+        </div>
+        <div class="contact">
+            <h4>Leave a meassge in the</h4>
+            <h2>programming.hero1@gmail.com</h2>
+        </div>
+    </section>
+    <p class="copyright">programming Hero initiative. © 2020 All rights Reserved.</p>
 </body>
+
 </html>
