making website finished

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <h1 class="name">Jack Smith</h1>
             <p style="font-size: 20px;">You might saw me jumping, climbing buildings, and stopping trains. But nobody
                 pays me a dime for that work.</p><br>
-            <a class="link-btn" href="https://www.linkedin.com/in/roky-das-448b3617b/">HIRE ME</a>
+            <a class="link-btn" target="_blank" href="https://www.linkedin.com/in/roky-das-448b3617b/">HIRE ME</a>
         </div>
         <div class="header-pic">
             <img width="100%" src="images/peter.png" alt="Peter's first picture">
@@ -35,7 +35,7 @@
             <p style="font-size: 20px;">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
                 Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a
                 galley of type and scrambled it to make a type.</p><br>
-            <a class="link-btn" href="https://www.linkedin.com/in/roky-das-448b3617b/">DOWNLOAD CV</a>
+            <a class="link-btn" target="_blank" href="https://drive.google.com/file/d/1i6qI-inqYS0dwz75uNGoIX-zEkbZO--u/view?usp=sharing/">DOWNLOAD CV</a>
         </div>
     </section>
     <!-- This is 3rd section -->
